--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ezio.bilibili">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".BilibiliApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BilibiliApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
